(library
   (name TreasonTest)
   (public_name treason.test)
   ; the linkall flag ensures that all of our tests are compiled and the
   ; -g flag emits debugging information
   (ocamlopt_flags -linkall -g)
   ; you will want to depend on the library you are testing as well, however for
   ; the purposes of this example we are only depending on the test runner itself
   (libraries rely.lib lib)
   (modules (:standard \ RunTests))
)
(executable
  ; the for the library is automatically detected because of the name, but we
  ; need to explicitly specify the package here
  (package treason)
  (name RunTests)
  (public_name RunTests.exe)
  (libraries
    treason.test
  )
  (modules RunTests)
)
